# ots-python

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  build.py  build.sh  config.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  wheels.yml
cross-files/darwin/: arm64  x86_64
src/python/ots/: __init__.py  __main__.py
tests/: test_ots.py
