[download]
; OpenType Sanitizer version that is downloaded from setup.py
version = 7.1.9
; expected SHA-256 of the downloaded tarball. E.g. you can calculate it with:
; $ shasum -a 256 ots-X.X.X.tar.xz
sha256 = dc1e4847d7cab473b95d274aa11ec85a3553d999fc97ff6fb686d5c69919c830

[metadata]
license_file = LICENSE
