[download]
; OpenType Sanitizer version that is downloaded from setup.py
version = 8.1.0
; expected SHA-256 of the downloaded tarball. E.g. you can calculate it with:
; $ shasum -a 256 ots-X.X.X.tar.xz
sha256 = e87cb5c18962e3b94b7ee27ab66fee9fdb22b12a9e06de9ecc3ef4f6990cefba

[metadata]
license_file = LICENSE
