[download]
; OpenType Sanitizer version that is downloaded from setup.py
version = 8.1.2
; expected SHA-256 of the downloaded tarball. E.g. you can calculate it with:
; $ shasum -a 256 ots-X.X.X.tar.xz
sha256 = f07d68fb0b797df13dbd9ecc04297b5b82e05b195b96a957c802eedc33a0fe50

[metadata]
license_file = LICENSE
